--- a/libs/css/components/grid.css
+++ b/libs/css/components/grid.css
@@ -1346,7 +1346,7 @@
 .ui.grid > .orange.row,
 .ui.grid > .orange.column,
 .ui.grid > .row > .orange.column {
-  background-color: #F2711C !important;
+  background-color: #E95420 !important;
   color: #FFFFFF;
 }
 
