fix webpack issue

--- a/libs/css/default.less
+++ b/libs/css/default.less
@@ -1,5 +1,7 @@
 /* Import Semantic UI */
-@import (inline) 'semantic.css';
+@import (inline) 'semantic.min.css';
+@import (inline) 'ionicons/ionicons.min.css';
+@import (inline) 'pikaday.css';
 @import (inline) 'owfont-regular.min.css';
 @import (inline) 'growl/jquery.growl.css';
 
